--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -2,7 +2,7 @@
 <view class='container'>
   <image class='user_image' src='/images/000.jpg'></image>
   <text class='user_name'><text style='color:red;'>Hello</text>,七月</text>
-  <view class='moto_container'>
+  <view class='moto_container' bindtap='onTap'>
     <text class='moto'>开启小程序之旅</text>
   </view>
 </view>
