--- a/pages/posts/post-item/post-item-template.wxml
+++ b/pages/posts/post-item/post-item-template.wxml
@@ -1,17 +1,17 @@
 <template name="postItem">
   <view class='post-container'>
     <view class='post-author-date'>
-      <image src='{{item.avatar}}'></image>
-      <text>{{item.date}}</text>
+      <image src='{{avatar}}'></image>
+      <text>{{date}}</text>
     </view>
-    <text class='post-title'>{{item.title}}</text>
-    <image class='post-image' src='{{item.imgSrc}}'></image>
-    <text class='post-content'>{{item.content}}</text>
+    <text class='post-title'>{{title}}</text>
+    <image class='post-image' src='{{imgSrc}}'></image>
+    <text class='post-content'>{{content}}</text>
     <view class='post-like'>
       <image src='/images/icon/chat.png'></image>
-      <text>{{item.collection}}</text>
+      <text>{{collection}}</text>
       <image src='/images/icon/view.png'></image>
-      <text>{{item.reading}}</text>
+      <text>{{reading}}</text>
     </view>
   </view>
 </template>
