--- a/pages/posts/post.wxss
+++ b/pages/posts/post.wxss
@@ -1,11 +1,12 @@
 @import "post-item/post-item-template.wxss";
 
-swiper {
+swiper,swiper image {
   width: 100%;
   height: 600rpx;
 }
-
+/* 
 swiper image {
   width: 100%;
-  height: 750rpx;
-}
+  height: 600rpx;
+} 
+*/
