--- a/pages/posts/post-detail/post-detail.wxml
+++ b/pages/posts/post-detail/post-detail.wxml
@@ -1,7 +1,7 @@
 <!-- post-detail.wxml -->
 <view class='container'>
-  <image class='head-img' src='{{postData.headImgSrc}}'></image>
-  <image class='audio' src='/images/music/music-start.png'></image>
+  <image class='head-img' src='{{isPlayingMusic?postData.music.coverImg:postData.headImgSrc}}'></image>
+  <image catchtap='onMusicTap' class='audio' src="{{isPlayingMusic?'/images/music/music-stop.png':'/images/music/music-start.png'}}"></image>
   <view class='author-date'>
     <image class='avatar' src='{{postData.avatar}}'></image>
     <text class='author'>{{postData.author}}</text>
