--- a/pages/movies/movies.wxss
+++ b/pages/movies/movies.wxss
@@ -1,1 +1,45 @@
 @import "./movie-list/movie-list-template.wxss";
+@import "./movie-grid/movie-grid-template.wxss";
+
+.movie_container {
+  background-color: #f2f2f2;
+}
+
+.movies_container {
+  margin-bottom: 30rpx;
+}
+
+.search {
+  background-color: #f2f2f2;
+  width: 1000%;
+  height: 80rpx;
+  display: flex;
+  flex-direction: row;
+}
+
+.search-img {
+  margin: auto 0 auto 20rpx;
+}
+
+.search input {
+  width: 600rpx;
+  height: 100%;
+  margin-left: 10px;
+  font-size: 28rpx;
+}
+.xx-img{
+ height: 30rpx; 
+ width: 30rpx; 
+ margin: auto 0 auto 10rpx;
+}
+
+.placeholder {
+  font-size: 22rpx;
+  color: #ddd;
+  margin-left: 20rpx;
+}
+
+.search-panel{
+  position: absolute;
+  top: 80rpx;
+}
