--- a/pages/movies/movie-grid/movie-grid-template.wxml
+++ b/pages/movies/movie-grid/movie-grid-template.wxml
@@ -1,13 +1,10 @@
-<!-- movies-template.wxml -->
 <import src="../movie/movie-template.wxml" />
-
-<template name='movieGridTemplate'>
-  <scroll-view class='grid-container'
-   scroll-y="true" scroll-x="false" bindscrolltolower="onScrollLower">
-    <block wx:for="{{movies}}" wx:key wx:for-item="movie">
-      <view class='single-view-container'>
+<template name="movieGridTemplate">
+  <view class="grid-container">
+    <block wx:for="{{movies}}" wx:for-item="movie" wx:key>
+      <view class="single-view-container">
         <template is="movieTemplate" data="{{...movie}}" />
       </view>
     </block>
-  </scroll-view>
+  </view>
 </template>
